--- a/src/app/modules/dashboard/overview/overview.component.html
+++ b/src/app/modules/dashboard/overview/overview.component.html
@@ -2,10 +2,12 @@
   <app-overview-tiles></app-overview-tiles>
   <p-divider styleClass="py-4"></p-divider>
   <div class="grid w-full">
-    <div class="col-6">
+    <div class="col-12 xl:col-6 lg:col-12 md:col-12 xl:mb-0 lg:mb-0 mb-5">
       <app-top-city></app-top-city>
     </div>
-    <div class="col-6 pl-4"><app-top-article></app-top-article></div>
+    <div class="col-12 xl:col-6 lg:col-12 md:col-12 pl-4">
+      <app-top-article></app-top-article>
+    </div>
   </div>
   <p-divider styleClass="py-4"></p-divider>
   <app-top-media></app-top-media>
