--- a/src/app/modules/dashboard/overview/top-media/top-media.component.html
+++ b/src/app/modules/dashboard/overview/top-media/top-media.component.html
@@ -6,7 +6,7 @@
   </div>
   <spinner [spinning]="isLoading">
     <div class="grid">
-      <div class="col-6" *ngFor="let chart of chartsData">
+      <div class="col-12 xl:col-6 lg:col-6 md:col-12" *ngFor="let chart of chartsData">
         <app-media-chart
           [data]="chart"
           [title]="chart.media_name"
