--- a/src/app/modules/dashboard/analyze/analyze.component.html
+++ b/src/app/modules/dashboard/analyze/analyze.component.html
@@ -1,1 +1,17 @@
-<p>analyze works!</p>
+<section>
+  <div class="mb-6">
+    <app-latest-news></app-latest-news>
+  </div>
+  <div class="mb-5">
+    <div class="grid">
+      <div class="col-8">
+        <app-media-sentiment></app-media-sentiment>
+      </div>
+      <div class="col-4">
+        <app-featured-news></app-featured-news>
+      </div>
+    </div>
+  </div>
+  <div class="mb-6"><app-headline-news></app-headline-news></div>
+  <div><app-top-issue></app-top-issue></div>
+</section>
