--- a/src/app/modules/dashboard/overview/top-article/top-article.component.html
+++ b/src/app/modules/dashboard/overview/top-article/top-article.component.html
@@ -1,6 +1,6 @@
 <section>
   <div class="flex justify-content-between">
-    <div class="flex align-items-start gap-2 mb-4">
+    <div class="flex align-items-center gap-2 mb-4">
       <icon-newspaper fill="var(--primary-color)"></icon-newspaper>
       <div class="text-sm font-semibold">Top Artikel</div>
       <icon-info></icon-info>
