--- a/src/app/modules/dashboard/analyze/headline-news/headline-news.component.html
+++ b/src/app/modules/dashboard/analyze/headline-news/headline-news.component.html
@@ -1,7 +1,59 @@
 <section>
-  <div class="flex align-items-center gap-2 pl-2">
+  <div class="flex align-items-center gap-2 mb-4">
     <icon-newspaper fill="var(--primary-color)"></icon-newspaper>
     <div class="text-sm font-semibold">Headlines News</div>
     <icon-info></icon-info>
+  </div>
+  <div class="grid overflow-y-auto" style="height: 280px;">
+    <div class="col-3" *ngFor="let item of articles">
+      <div class="grid grid-nogutter">
+        <div class="col-12">
+          <div
+            class="flex flex-column xl:flex-row xl:align-items-start pb-4 gap-4"
+          >
+            <div
+              style="
+                background-image: url('https://primefaces.org/cdn/primeng/images/demo/product/green-earbuds.jpg');
+              "
+              class="w-6rem h-6rem bg-cover bg-center border-round-lg"
+            ></div>
+            <div
+              class="flex flex-column sm:flex-row justify-content-between align-items-center xl:align-items-start flex-1"
+            >
+              <div class="flex flex-column">
+                <div
+                  class="text-sm font-semibold white-space-nowrap text-overflow-ellipsis overflow-hidden"
+                  style="width: 200px"
+                >
+                  {{ item.title }}
+                </div>
+                <p
+                  class="white-space-nowrap overflow-hidden text-overflow-ellipsis p-0 mt-2"
+                  style="width: 200px"
+                >
+                  {{ item.content }}
+                </p>
+                <div class="flex gap-3 align-items-center">
+                  <div class="flex align-items-center gap-2">
+                    <i class="pi pi-globe text-500 text-xs"></i>
+                    <span
+                      class="text-xs text-500 p-0 mt-0 white-space-nowrap overflow-hidden text-overflow-ellipsis"
+                      style="width: 80px"
+                      >{{ item.journalist }}</span
+                    >
+                  </div>
+                  <div class="flex align-items-center gap-2">
+                    <i class="pi pi-clock text-500 text-xs"></i>
+                    <span class="text-xs text-500 p-0 mt-0">{{
+                      item.datee.split(" ")[0]
+                    }}</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
