--- a/src/app/modules/dashboard/analyze/top-issue/top-issue.component.html
+++ b/src/app/modules/dashboard/analyze/top-issue/top-issue.component.html
@@ -1,7 +1,37 @@
 <section>
-  <div class="flex align-items-center gap-2 pl-2">
+  <div class="flex align-items-center gap-2 mb-4">
     <icon-newspaper fill="var(--primary-color)"></icon-newspaper>
     <div class="text-sm font-semibold">Top 10 Issue</div>
     <icon-info></icon-info>
+  </div>
+  <div class="mb-5">
+    <canvas #chartArea width="800" height="400"></canvas>
+  </div>
+  <div>
+    <p-tabMenu
+      [model]="tabItems"
+      [activeItem]="activeTab"
+      (activeItemChange)="onActiveItemChange($event)"
+    >
+      <ng-template pTemplate="item" let-item>
+        <div
+          class="p-menuitem-link flex justify-content-between align-items-center cursor-pointer"
+        >
+          <div class="flex align-items-center gap-2">
+            <icon-home *ngIf="item.key === 'media'"></icon-home>
+            <icon-chart *ngIf="item.key === 'coverage'"></icon-chart>
+            <div class="text-xs font-medium text-color">{{ item.label }}</div>
+          </div>
+        </div>
+      </ng-template>
+    </p-tabMenu>
+    <div class="py-4">
+      <app-media-visibility
+        *ngIf="activeTab && activeTab['key'] === 'media'"
+      ></app-media-visibility>
+      <app-coverage-tone
+        *ngIf="activeTab && activeTab['key'] === 'coverage'"
+      ></app-coverage-tone>
+    </div>
   </div>
 </section>
