--- a/src/app/modules/dashboard/components/media-chart/media-chart.component.html
+++ b/src/app/modules/dashboard/components/media-chart/media-chart.component.html
@@ -1,16 +1,4 @@
-<p-card styleClass="shadow-none border-1 border-200">
-  <ng-template pTemplate="header">
-    <div class="flex justify-content-between align-items-center pt-3 px-3">
-      <div class="text-sm font-semibold">{{ title }}</div>
-      <p-button
-        icon="pi pi-ellipsis-h"
-        [outlined]="true"
-        [text]="true"
-        severity="secondary"
-        styleClass="bg-white border-1 border-200"
-      ></p-button>
-    </div>
-  </ng-template>
+<chart-card [title]="title">
   <div class="flex gap-6">
     <div class="relative">
       <div
@@ -23,7 +11,7 @@
       >
         <div class="flex flex-column align-items-center justify-content-center">
           <div class="text-sm text-color-secondary">Total Artikel</div>
-          <div class="text-5xl font-semibold">{{data.totalTones}}</div>
+          <div class="text-5xl font-semibold">{{ data.totalTones }}</div>
         </div>
       </div>
       <p-chart
@@ -68,10 +56,12 @@
           <div class="text-sm font-bold">Positive</div>
         </div>
         <div class="flex align-items-baseline gap-2">
-          <div class="font-bold text-3xl">{{ data.combinedTones.positive }}</div>
+          <div class="font-bold text-3xl">
+            {{ data.combinedTones.positive }}
+          </div>
           <div class="text-sm text-400">Artikel</div>
         </div>
       </div>
     </div>
   </div>
-</p-card>
+</chart-card>
