--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -79,10 +79,10 @@
     </ng-template>
   </p-breadcrumb>
   <div class="pt-2 pb-4 flex flex-wrap xl:flex-nowrap xl:gap-5">
-    <aside class="w-full md:w-full lg:w-full xl:w-2 mb-4">
+    <aside class="w-full md:w-full lg:w-full xl:w-2 xl:min-w-2 mb-4">
       <app-filter></app-filter>
     </aside>
-    <section class="w-full md:w-full lg:w-full xl:w-10">
+    <section class="w-full md:w-full lg:w-full xl:w-10 xl:max-w-10">
       <router-outlet></router-outlet>
     </section>
   </div>
