--- a/src/app/modules/dashboard/analyze/latest-news/latest-news.component.html
+++ b/src/app/modules/dashboard/analyze/latest-news/latest-news.component.html
@@ -4,55 +4,58 @@
     <div class="text-sm font-semibold">Latest News</div>
     <icon-info></icon-info>
   </div>
-  <p-carousel
-    [value]="products"
-    [numVisible]="4"
-    [numScroll]="1"
-    [responsiveOptions]="responsiveOptions"
-  >
-    <ng-template let-product pTemplate="item">
-      <div>
-        <div class="mb-3">
-          <div
-            style="
-              background-image: url('https://primefaces.org/cdn/primeng/images/demo/product/green-earbuds.jpg');
-            "
-            class="w-full h-10rem bg-cover bg-center border-round-lg"
-          ></div>
-        </div>
+  <spinner [spinning]="isLoading">
+    <p-carousel
+      [value]="articles"
+      [numVisible]="4"
+      [numScroll]="1"
+      [responsiveOptions]="responsiveOptions"
+    >
+      <ng-template let-article pTemplate="item">
         <div>
-          <div
-            class="mb-1 font-semibold text-sm text-color white-space-nowrap text-overflow-ellipsis overflow-hidden"
-            style="width: 250px"
-          >
-            {{ product.name }}
+          <div class="mb-3">
+            <div
+              style="
+                background-image: url('https://primefaces.org/cdn/primeng/images/demo/product/green-earbuds.jpg');
+              "
+              class="w-full h-10rem bg-cover bg-center border-round-lg"
+            ></div>
           </div>
-          <div
-            class="mt-0 mb-3 text-xs text-color-secondary white-space-nowrap text-overflow-ellipsis overflow-hidden"
-            style="width: 250px"
-          >
-            {{ product.price }}
-          </div>
-          <div class="flex justify-content-between">
-            <div class="flex gap-1">
-              <div>
-                <p-avatar label="U" pBadge shape="circle"></p-avatar>
-              </div>
-              <div>
-                <div class="font-light" style="font-size: 0.6rem">
-                  Tofan Aditya
-                </div>
-                <div class="text-color-secondary" style="font-size: 0.6rem">
-                  Okezone
-                </div>
-              </div>
+          <div>
+            <div
+              class="mb-1 font-semibold text-sm text-color white-space-nowrap text-overflow-ellipsis overflow-hidden"
+              style="width: 280px"
+            >
+              {{ article.title }}
             </div>
-            <div class="text-color-secondary" style="font-size: 0.6rem">
-              Apr 14, 2021
+            <div
+              class="mt-0 mb-3 text-xs text-color-secondary white-space-nowrap text-overflow-ellipsis overflow-hidden"
+              style="width: 280px"
+            >
+              {{ article.content }}
+            </div>
+            <div class="flex justify-content-between align-items-center">
+              <div class="flex gap-2 align-items-center">
+                <div>
+                  <p-avatar label="U" pBadge shape="circle"></p-avatar>
+                </div>
+                <div>
+                  <div class="font-light" style="font-size: 0.6rem">
+                    {{ article.journalist }}
+                  </div>
+                  <div class="text-color-secondary" style="font-size: 0.6rem">
+                    {{ article.media_name }}
+                  </div>
+                </div>
+              </div>
+              <div class="text-color-secondary mr-2" style="font-size: 0.6rem">
+                <i class="pi pi-globe" style="font-size: 0.6rem"></i>
+                {{ article.datee.split(" ")[0] }}
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </ng-template>
-  </p-carousel>
+      </ng-template>
+    </p-carousel>
+  </spinner>
 </section>
