--- a/src/app/modules/dashboard/analyze/top-issue/coverage-tone/coverage-tone.component.html
+++ b/src/app/modules/dashboard/analyze/top-issue/coverage-tone/coverage-tone.component.html
@@ -12,60 +12,13 @@
     <div class="col-6">
       <chart-card title="Coverage Pie">
         <div class="flex align-items-center gap-6">
-          <p-chart
-            type="pie"
-            [data]="visibilityPieData"
-            [options]="visibilityPieOpts"
-          ></p-chart>
-          <div class="flex flex-column gap-3">
-            <div>
-              <div class="flex align-items-center gap-2 mb-2">
-                <div
-                  style="background-color: #1b81e2; width: 6px; height: 14px"
-                ></div>
-                <div class="text-xs font-bold">Faskes Kesehatan</div>
-              </div>
-              <div class="flex align-items-baseline gap-2">
-                <div class="font-bold text-3xl">35</div>
-                <div class="text-xs text-400">%</div>
-              </div>
-            </div>
-            <div>
-              <div class="flex align-items-center gap-2 mb-2">
-                <div
-                  style="background-color: #05b9bf; width: 6px; height: 14px"
-                ></div>
-                <div class="text-xs font-bold">1. BPJS Kesehatan</div>
-              </div>
-              <div class="flex align-items-baseline gap-2">
-                <div class="font-bold text-3xl">35</div>
-                <div class="text-xs text-400">%</div>
-              </div>
-            </div>
-            <div>
-              <div class="flex align-items-center gap-2 mb-2">
-                <div
-                  style="background-color: #c9e806; width: 6px; height: 14px"
-                ></div>
-                <div class="text-xs font-bold">Mobile JKN</div>
-              </div>
-              <div class="flex align-items-baseline gap-2">
-                <div class="font-bold text-3xl">30</div>
-                <div class="text-xs text-400">%</div>
-              </div>
-            </div>
-            <div>
-              <div class="flex align-items-center gap-2 mb-2">
-                <div
-                  style="background-color: #fb3b52; width: 6px; height: 14px"
-                ></div>
-                <div class="text-xs font-bold">3. Ali Ghufron Mukti</div>
-              </div>
-              <div class="flex align-items-baseline gap-2">
-                <div class="font-bold text-3xl">30</div>
-                <div class="text-xs text-400">%</div>
-              </div>
-            </div>
+          <div id="coverage-legend-container" class="flex align-items-center gap-6">
+            <p-chart
+              type="pie"
+              [data]="coveragePieData"
+              [options]="coveragePieOpts"
+              [plugins]="coveragePiePlugins"
+            ></p-chart>
           </div>
         </div>
       </chart-card>
