--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -55,7 +55,7 @@
       <div class="flex align-items-center gap-4">
         <toggle-darkmode></toggle-darkmode>
         <i class="pi pi-search font-bold"></i>
-        <div class="flex">
+        <div class="flex cursor-pointer" (click)="menu.toggle($event)">
           <p-avatar
             shape="circle"
             image="../../../assets/default_avatar.png"
@@ -66,6 +66,7 @@
             <div class="m-0 text-gray-500 text-xs">Admin</div>
           </div>
         </div>
+        <p-tieredMenu #menu [model]="profileItems" [popup]="true" styleClass="text-sm"></p-tieredMenu>
       </div>
     </ng-template>
   </p-toolbar>
