finish chart works

--- a/src/app/modules/dashboard/analyze/top-issue/coverage-tone/coverage-tone.component.html
+++ b/src/app/modules/dashboard/analyze/top-issue/coverage-tone/coverage-tone.component.html
@@ -4,8 +4,8 @@
       <chart-card title="Visibility Chart">
         <p-chart
           type="bar"
-          [data]="visibilityChartData"
-          [options]="visibilityChartOpts"
+          [data]="coverageChartData"
+          [options]="coverageChartOpts"
         ></p-chart>
       </chart-card>
     </div>
@@ -27,8 +27,8 @@
       <chart-card title="Tone by Media Selection">
         <p-chart
           type="bar"
-          [data]="visibilityChartData"
-          [options]="visibilityChartOpts"
+          [data]="toneByMediaChartData"
+          [options]="toneByMediaChartOpts"
         ></p-chart>
       </chart-card>
     </div>
@@ -36,8 +36,8 @@
       <chart-card title="Tone by Category">
         <p-chart
           type="bar"
-          [data]="visibilityChartData"
-          [options]="visibilityChartOpts"
+          [data]="toneByCategChartData"
+          [options]="toneByCategChartOpts"
         ></p-chart>
       </chart-card>
     </div>
