--- a/src/app/modules/dashboard/analyze/top-issue/coverage-tone/coverage-tone.component.html
+++ b/src/app/modules/dashboard/analyze/top-issue/coverage-tone/coverage-tone.component.html
@@ -1,6 +1,6 @@
 <section>
   <div class="grid">
-    <div class="col-6">
+    <div class="xl:col-6 lg:col-6 col-12">
       <chart-card title="Visibility Chart">
         <p-chart
           type="bar"
@@ -9,10 +9,13 @@
         ></p-chart>
       </chart-card>
     </div>
-    <div class="col-6">
+    <div class="xl:col-6 lg:col-6 col-12">
       <chart-card title="Coverage Pie">
         <div class="flex align-items-center gap-6">
-          <div id="coverage-legend-container" class="flex align-items-center gap-6">
+          <div
+            id="coverage-legend-container"
+            class="flex align-items-center justify-content-center gap-6 w-full"
+          >
             <p-chart
               type="pie"
               [data]="coveragePieData"
@@ -23,7 +26,7 @@
         </div>
       </chart-card>
     </div>
-    <div class="col-6">
+    <div class="xl:col-6 lg:col-6 col-12">
       <chart-card title="Tone by Media Selection">
         <p-chart
           type="bar"
@@ -32,7 +35,7 @@
         ></p-chart>
       </chart-card>
     </div>
-    <div class="col-6">
+    <div class="xl:col-6 lg:col-6 col-12">
       <chart-card title="Tone by Category">
         <p-chart
           type="bar"
