--- a/src/app/modules/dashboard/analyze/top-issue/media-visibility/media-visibility.component.html
+++ b/src/app/modules/dashboard/analyze/top-issue/media-visibility/media-visibility.component.html
@@ -1,6 +1,6 @@
 <section>
   <div class="grid">
-    <div class="col-6">
+    <div class="xl:col-6 col-12">
       <chart-card title="Visibility Chart">
         <p-chart
           type="line"
@@ -9,9 +9,9 @@
         ></p-chart>
       </chart-card>
     </div>
-    <div class="col-6">
+    <div class="xl:col-6 col-12">
       <chart-card title="Visibility Pie">
-        <div class="flex align-items-center gap-6">
+        <div class="flex align-items-center justify-content-center gap-6">
           <div id="legend-container" class="flex align-items-center gap-6">
             <p-chart
               type="pie"
