--- a/src/app/modules/dashboard/components/filter/filter.component.scss
+++ b/src/app/modules/dashboard/components/filter/filter.component.scss
@@ -11,6 +11,13 @@
     padding: 22px 0.75rem;
   }
 
+  ::ng-deep .datepicker .p-inputtext {
+    font-size: 14px;
+    padding-top: 22px;
+    padding-bottom: 8px;
+  }
+  
+
   .select-container {
     position: relative;
 
