--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -62,11 +62,18 @@
             styleClass="mr-2"
           ></p-avatar>
           <div class="flex flex-column">
-            <div class="m-0 text-sm white-space-nowrap">{{ user?.usr_comp_name ?? "-" }}</div>
+            <div class="m-0 text-sm white-space-nowrap">
+              {{ user?.usr_comp_name ?? "-" }}
+            </div>
             <div class="m-0 text-gray-500 text-xs">Admin</div>
           </div>
         </div>
-        <p-tieredMenu #menu [model]="profileItems" [popup]="true" styleClass="text-sm"></p-tieredMenu>
+        <p-tieredMenu
+          #menu
+          [model]="profileItems"
+          [popup]="true"
+          styleClass="text-sm"
+        ></p-tieredMenu>
       </div>
     </ng-template>
   </p-toolbar>
@@ -74,13 +81,16 @@
 <main class="container">
   <p-breadcrumb class="breadcrumb" [model]="breadCrumbsItems">
     <ng-template pTemplate="item" let-item>
-      <div [ngClass]="{ 'text-color-secondary': item.id === 'dashboard' }">
+      <div [ngClass]="{ 'text-color-secondary': item.label === 'Dashboard' }">
         {{ item.label }}
       </div>
     </ng-template>
   </p-breadcrumb>
   <div class="pt-2 pb-4 flex flex-wrap xl:flex-nowrap xl:gap-5">
-    <aside class="w-full md:w-full lg:w-full xl:w-2 xl:min-w-2 mb-4">
+    <aside
+      class="w-full md:w-full lg:w-full xl:w-2 xl:min-w-2 mb-4"
+      style="min-width: 16.66667%"
+    >
       <app-filter></app-filter>
     </aside>
     <section class="w-full md:w-full lg:w-full xl:w-10 xl:max-w-10">
