--- a/src/app/modules/dashboard/overview/overview-tiles/overview-tiles.component.html
+++ b/src/app/modules/dashboard/overview/overview-tiles/overview-tiles.component.html
@@ -4,7 +4,7 @@
       <app-tile
         title="Print"
         [content]="mediaCount.print"
-        icon="globe"
+        icon="newspaper"
         bgColor="#D4DCEB"
         color="#464255"
       ></app-tile>
@@ -31,7 +31,7 @@
       <app-tile
         title="Total Article"
         [content]="mediaCount.total"
-        icon="newspaper"
+        icon="stack"
         color="#1B81E2"
         bgColor="#e8f2fc"
       ></app-tile>
