--- a/src/app/modules/dashboard/analyze/top-issue/media-visibility/media-visibility.component.html
+++ b/src/app/modules/dashboard/analyze/top-issue/media-visibility/media-visibility.component.html
@@ -1,27 +1,29 @@
 <section>
-  <div class="grid">
-    <div class="xl:col-6 col-12">
-      <chart-card title="Visibility Chart">
-        <p-chart
-          type="line"
-          [data]="visibilityChartData"
-          [options]="visibilityChartOpts"
-        ></p-chart>
-      </chart-card>
-    </div>
-    <div class="xl:col-6 col-12">
-      <chart-card title="Visibility Pie">
-        <div class="flex align-items-center justify-content-center gap-6">
-          <div id="legend-container" class="flex align-items-center gap-6">
-            <p-chart
-              type="pie"
-              [data]="visibilityPieData"
-              [options]="visibilityPieOpts"
-              [plugins]="visibilityPiePlugins"
-            ></p-chart>
+  <spinner [spinning]="isLoading">
+    <div class="grid">
+      <div class="xl:col-6 col-12">
+        <chart-card title="Visibility Chart">
+          <p-chart
+            type="line"
+            [data]="visibilityChartData"
+            [options]="visibilityChartOpts"
+          ></p-chart>
+        </chart-card>
+      </div>
+      <div class="xl:col-6 col-12">
+        <chart-card title="Visibility Pie">
+          <div class="flex align-items-center justify-content-center gap-6">
+            <div id="legend-container" class="flex align-items-center gap-6">
+              <p-chart
+                type="pie"
+                [data]="visibilityPieData"
+                [options]="visibilityPieOpts"
+                [plugins]="visibilityPiePlugins"
+              ></p-chart>
+            </div>
           </div>
-        </div>
-      </chart-card>
+        </chart-card>
+      </div>
     </div>
-  </div>
+  </spinner>
 </section>
