--- a/src/app/modules/dashboard/analyze/top-issue/top-issue.component.html
+++ b/src/app/modules/dashboard/analyze/top-issue/top-issue.component.html
@@ -5,7 +5,20 @@
     <icon-info></icon-info>
   </div>
   <div class="mb-5">
-    <canvas #chartArea width="800" height="400"></canvas>
+    <spinner [spinning]="isLoading">
+      <canvas
+        [ngClass]="{ hidden: !isDataExist }"
+        #chartArea
+        width="800"
+        height="400"
+      ></canvas>
+      <div
+        *ngIf="!isDataExist"
+        class="h-5rem w-5rem flex align-items-center justify-content-center text-color-secondary"
+      >
+        No Data.
+      </div>
+    </spinner>
   </div>
   <div>
     <div class="relative">
