--- a/src/app/modules/dashboard/overview/top-article/top-article.component.html
+++ b/src/app/modules/dashboard/overview/top-article/top-article.component.html
@@ -16,7 +16,7 @@
     </div>
   </div>
   <spinner [spinning]="isLoading">
-    <p-scroller [items]="articles" [itemSize]="100" scrollHeight="524px">
+    <p-scroller [items]="articles" [itemSize]="articles.length + 1" scrollHeight="524px">
       <ng-template pTemplate="item" let-item let-options="options">
         <div class="grid grid-nogutter">
           <div class="col-12">
@@ -24,10 +24,15 @@
               class="flex flex-column xl:flex-row xl:align-items-start py-3 gap-4"
               [ngClass]="{ 'border-top-1 surface-border': !options.first }"
             >
-              <div
-                [style.backgroundImage]="'url(' + item.image_url + ')'"
-                class="w-6rem h-6rem bg-cover bg-center border-round-lg"
-              ></div>
+              <div class="w-6rem">
+                <img
+                  [src]="item.image_url"
+                  [alt]="item.title"
+                  class="h-6rem w-full"
+                  style="object-fit: cover"
+                  imgFallback="https://placehold.co/600x400?text=No+Image+Available"
+                />
+              </div>
               <div
                 class="flex flex-column sm:flex-row justify-content-between align-items-center xl:align-items-start flex-1"
               >
