--- a/src/app/modules/dashboard/spokesperson/spokesperson.component.html
+++ b/src/app/modules/dashboard/spokesperson/spokesperson.component.html
@@ -1,1 +1,18 @@
-<p>spokesperson works!</p>
+<section class="grid">
+  <div class="col-3">
+    <app-influencers></app-influencers>
+  </div>
+  <div class="col-9">
+    <div class="mb-5">
+      <app-latest-news></app-latest-news>
+    </div>
+    <div class="grid">
+      <div class="col-7">
+        <app-media-share></app-media-share>
+      </div>
+      <div class="col-5">
+        <app-statements></app-statements>
+      </div>
+    </div>
+  </div>
+</section>
