--- a/src/app/modules/dashboard/spokesperson/statements/statements.component.html
+++ b/src/app/modules/dashboard/spokesperson/statements/statements.component.html
@@ -1,6 +1,10 @@
 <div>
   <div class="flex align-items-center gap-2 mb-4">
-    <icon-newspaper fill="var(--primary-color)"></icon-newspaper>
+    <icon-dialogue
+      fill="var(--primary-color)"
+      [width]="20"
+      [height]="16"
+    ></icon-dialogue>
     <div class="text-sm font-semibold">Statements</div>
     <icon-info></icon-info>
   </div>
