--- a/src/app/modules/dashboard/spokesperson/influencers/influencers.component.html
+++ b/src/app/modules/dashboard/spokesperson/influencers/influencers.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="flex align-items-center gap-2 mb-4">
-    <icon-newspaper fill="var(--primary-color)"></icon-newspaper>
+    <icon-mic fill="var(--primary-color)"></icon-mic>
     <div class="text-sm font-semibold">Spokeperson</div>
     <icon-info></icon-info>
   </div>
