--- a/src/app/modules/dashboard/spokesperson/spokesperson.component.html
+++ b/src/app/modules/dashboard/spokesperson/spokesperson.component.html
@@ -1,8 +1,8 @@
 <section class="grid">
-  <div class="col-3">
+  <div class="col-12 lg:col-3 xl:col-3">
     <app-influencers></app-influencers>
   </div>
-  <div class="col-9">
+  <div class="col-12 lg:col-9 xl:col-9">
     <div class="mb-5">
       <app-latest-news></app-latest-news>
     </div>
