--- a/src/app/core/components/chart-card/chart-card.component.html
+++ b/src/app/core/components/chart-card/chart-card.component.html
@@ -2,13 +2,23 @@
   <ng-template pTemplate="header">
     <div class="flex justify-content-between align-items-center pt-3 px-3">
       <div class="text-sm font-semibold">{{ title }}</div>
-      <p-button
-        icon="pi pi-ellipsis-h"
-        [outlined]="true"
-        [text]="true"
-        severity="secondary"
-        styleClass="bg-white border-1 border-200"
-      ></p-button>
+      <ng-container *ngIf="actionButton && actionButton.type === 'action'">
+        <p-button
+          [icon]="'pi ' + actionButton.icon"
+          [outlined]="true"
+          [text]="true"
+          severity="secondary"
+          styleClass="bg-white border-1 border-200"
+          (onClick)="actionButton?.onClick?.()"
+        ></p-button>
+      </ng-container>
+      <ng-container *ngIf="actionButton && actionButton.type === 'toggle'">
+        <p-toggleButton
+          [(ngModel)]="actionButton.toggle.value"
+          [onIcon]="'pi ' + actionButton.toggle.onIcon"
+          [offIcon]="'pi ' + actionButton.toggle.offIcon"
+        ></p-toggleButton>
+      </ng-container>
     </div>
   </ng-template>
   <ng-content></ng-content>
