--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -31,8 +31,8 @@
               ></icon-chart>
               <icon-newspaper
                 [width]="20"
-                *ngIf="item.routerLink === 'mediasov'"
-                [class]="navActiveItem === 'mediasov' ? 'fill-primary' : ''"
+                *ngIf="item.routerLink === 'media-sov'"
+                [class]="navActiveItem === 'media-sov' ? 'fill-primary' : ''"
               ></icon-newspaper>
               <icon-globe
                 [width]="20"
