onclick chart media sentinment

--- a/src/app/core/components/tile/tile.component.html
+++ b/src/app/core/components/tile/tile.component.html
@@ -26,12 +26,12 @@
       </div>
     </div>
   </div>
-  <div class="right-button cursor-pointer">
-    <div class="h-full flex">
+  <a [routerLink]="link" [queryParams]="queryParams" class="right-button cursor-pointer">
+    <div class="h-full flex" >
       <p-divider layout="vertical"></p-divider>
       <div class="align-self-center px-2">
         <i class="pi pi-angle-right text-primary"></i>
       </div>
     </div>
-  </div>
+  </a>
 </p-card>
