--- a/src/app/modules/dashboard/analyze/latest-news/latest-news.component.html
+++ b/src/app/modules/dashboard/analyze/latest-news/latest-news.component.html
@@ -38,7 +38,7 @@
             <div class="flex justify-content-between align-items-center">
               <div class="flex gap-2 align-items-center">
                 <div>
-                  <p-avatar label="U" pBadge shape="circle"></p-avatar>
+                  <p-avatar [label]="article.journalist[0]" pBadge shape="circle"></p-avatar>
                 </div>
                 <div>
                   <div class="font-light" style="font-size: 0.6rem">
