--- a/src/app/modules/dashboard/analyze/top-issue/media-visibility/media-visibility.component.html
+++ b/src/app/modules/dashboard/analyze/top-issue/media-visibility/media-visibility.component.html
@@ -3,11 +3,7 @@
     <div class="grid">
       <div class="col-12">
         <chart-card
-          [title]="
-            !visibilityChartActionButton.toggle.value
-              ? 'Visibility Chart'
-              : 'Visibility Pie'
-          "
+          title="Visibility Chart"
           [actionButton]="visibilityChartActionButton"
         >
           <p-chart
@@ -16,8 +12,23 @@
             [data]="visibilityChartLineData"
             [options]="visibilityChartLineOpts"
           ></p-chart>
+          <div *ngIf="visibilityChartActionButton.toggle.value">
+            <p-chart
+              type="bar"
+              [data]="visibilityChartBarData"
+              [options]="visibilityChartBarOpts"
+              [plugins]="visibilityChartBarPlugins"
+            ></p-chart>
+          </div>
+        </chart-card>
+      </div>
+      <div class="col-12">
+        <chart-card
+          title="Visibility Pie"
+          [actionButton]="visibilityPieActionButton"
+        >
           <div
-            *ngIf="visibilityChartActionButton.toggle.value"
+            *ngIf="!visibilityPieActionButton.toggle.value"
             class="flex align-items-center justify-content-center gap-6"
           >
             <div id="legend-container" class="flex align-items-center gap-6">
@@ -29,22 +40,16 @@
               ></p-chart>
             </div>
           </div>
-        </chart-card>
-      </div>
-      <!-- <div class="col-12">
-        <chart-card title="Visibility Pie">
-          <div class="flex align-items-center justify-content-center gap-6">
-            <div id="legend-container" class="flex align-items-center gap-6">
-              <p-chart
-                type="pie"
-                [data]="visibilityPieData"
-                [options]="visibilityPieOpts"
-                [plugins]="visibilityPiePlugins"
-              ></p-chart>
-            </div>
+          <div *ngIf="visibilityPieActionButton.toggle.value">
+            <p-chart
+              type="bar"
+              [data]="visibilityChartBarData"
+              [options]="visibilityChartBarOpts"
+              [plugins]="visibilityChartBarPlugins"
+            ></p-chart>
           </div>
         </chart-card>
-      </div> -->
+      </div>
     </div>
   </spinner>
 </section>
