--- a/src/app/modules/dashboard/media-sov/media-sov.component.html
+++ b/src/app/modules/dashboard/media-sov/media-sov.component.html
@@ -6,13 +6,16 @@
     <div class="mb-5">
       <app-latest-news></app-latest-news>
     </div>
-    <div class="grid">
+    <div class="grid mb-5">
       <div class="col-7">
         <app-sentiment></app-sentiment>
       </div>
       <div class="col-5">
         <app-statements></app-statements>
       </div>
+    </div>
+    <div>
+      <app-headline-news></app-headline-news>
     </div>
   </div>
 </section>
