--- a/src/app/modules/dashboard/media-sov/sentiment/sentiment.component.html
+++ b/src/app/modules/dashboard/media-sov/sentiment/sentiment.component.html
@@ -4,7 +4,7 @@
     <div id="mediashare-legend-container" >
       <p-chart
         type="pie"
-        [data]="data"
+        [data]="chartData"
         [options]="options"
         [plugins]="plugins"
       ></p-chart>
