--- a/src/app/modules/dashboard/overview/overview-tiles/overview-tiles.component.html
+++ b/src/app/modules/dashboard/overview/overview-tiles/overview-tiles.component.html
@@ -7,8 +7,8 @@
         icon="newspaper"
         bgColor="#D4DCEB"
         color="#464255"
-        link="articles"
-        [queryParams]="{type: 'print'}"
+        link="/dashboard/articles"
+        [queryParams]="{ type: 'print' }"
       ></app-tile>
     </div>
     <div class="col-12 xl:col-3 lg:col-6 md:col-6 sm:col-6">
@@ -18,8 +18,8 @@
         icon="globe"
         color="#FB3B52"
         bgColor="#ffebee"
-        link="articles"
-        [queryParams]="{type: 'online'}"
+        link="/dashboard/articles"
+        [queryParams]="{ type: 'online' }"
       ></app-tile>
     </div>
     <div class="col-12 xl:col-3 lg:col-6 md:col-6 sm:col-6">
@@ -29,8 +29,8 @@
         icon="screen"
         color="#05B9BF"
         bgColor="#e6f8f9"
-        link="articles"
-        [queryParams]="{type: 'tv'}"
+        link="/dashboard/articles"
+        [queryParams]="{ type: 'tv' }"
       ></app-tile>
     </div>
     <div class="col-12 xl:col-3 lg:col-6 md:col-6 sm:col-6">
