--- a/src/app/modules/dashboard/media-sov/headline-news/headline-news.component.html
+++ b/src/app/modules/dashboard/media-sov/headline-news/headline-news.component.html
@@ -4,37 +4,41 @@
     <div class="text-sm font-semibold">Headlines News</div>
     <icon-info></icon-info>
   </div>
-  <div class="grid overflow-y-auto" style="height: 230px">
+  <div class="grid overflow-y-auto" style="height: 240px">
     <div class="col-4" *ngFor="let item of articles">
       <div class="grid grid-nogutter border-1 border-200 p-3">
         <div class="col-12">
-          <div class="flex gap-3">
-            <div
-              style="
-                background-image: url('https://primefaces.org/cdn/primeng/images/demo/product/green-earbuds.jpg');
-              "
-              class="w-4rem h-4rem bg-cover bg-center border-round-lg"
-            ></div>
+          <div class="flex gap-2">
+            <img
+              [src]="item.image_url"
+              [alt]="item.title"
+              class="h-4rem w-4rem border-round"
+              style="object-fit: cover"
+              imgFallback="https://placehold.co/600x400?text=No+Image+Available"
+            />
             <div
               class="flex flex-column sm:flex-row justify-content-between align-items-center"
             >
               <div class="flex flex-column gap-1">
                 <div
                   class="text-sm font-semibold white-space-nowrap text-overflow-ellipsis overflow-hidden"
-                  style="width: 220px"
+                  style="width: 160px"
                 >
                   {{ item.title }}
                 </div>
                 <p
                   class="white-space-nowrap overflow-hidden text-overflow-ellipsis p-0 m-0"
-                  style="width: 220px"
+                  style="width: 160px"
                 >
                   {{ item.content }}
                 </p>
                 <div
                   class="flex align-items-center justify-content-between mt-1"
                 >
-                  <tag [content]="item.tone" [type]="item.tone.toLowerCase()"></tag>
+                  <tag
+                    [content]="item.tone"
+                    [type]="item.tone.toLowerCase()"
+                  ></tag>
                   <div class="flex align-items-center gap-2">
                     <i class="pi pi-clock text-500 text-xs"></i>
                     <span class="text-xs text-500 p-0 mt-0">{{
