--- a/src/app/modules/dashboard/newsindex/clipping/clipping.component.html
+++ b/src/app/modules/dashboard/newsindex/clipping/clipping.component.html
@@ -1,12 +1,9 @@
 <div class="card">
   <p-table
-    [value]="customers"
-    [lazy]="true"
-    (onLazyLoad)="loadCustomers($event)"
-    dataKey="id"
+    [value]="articles"
+    dataKey="article_id"
     [selection]="selectedCustomers"
     (selectionChange)="onSelectionChange($event)"
-    [selectAll]="selectAll"
     [paginator]="true"
     [rows]="10"
     [totalRecords]="totalRecords"
@@ -17,44 +14,41 @@
     <ng-template pTemplate="header">
       <tr class="text-sm font-medium">
         <th style="width: 8px"></th>
-        <th class="w-12rem pl-0">
+        <th class="w-8rem pl-0">
           <div class="flex align-items-center gap-2">
             <p-tableHeaderCheckbox class="offs"></p-tableHeaderCheckbox>
             <span>Date</span>
-            <i pSortableColumn="name" class="pi pi-angle-down"></i>
+            <i pSortableColumn="datee" class="pi pi-angle-down"></i>
           </div>
         </th>
         <th>
           <div class="flex align-items-center gap-2">
             Media Name
-            <i pSortableColumn="country.name" class="pi pi-angle-down"></i>
+            <i pSortableColumn="media_name" class="pi pi-angle-down"></i>
           </div>
         </th>
         <th>
           <div class="flex align-items-center gap-2">
             News Title
-            <i pSortableColumn="company" class="pi pi-angle-down"></i>
+            <i pSortableColumn="title" class="pi pi-angle-down"></i>
           </div>
         </th>
         <th>
           <div class="flex align-items-center gap-2">
             Issue
-            <i
-              pSortableColumn="representative.name"
-              class="pi pi-angle-down"
-            ></i>
+            <i pSortableColumn="issue" class="pi pi-angle-down"></i>
           </div>
         </th>
         <th style="width: 4rem" class="text-center">Preview</th>
       </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-customer let-expanded="expanded">
+    <ng-template pTemplate="body" let-article let-expanded="expanded">
       <tr class="text-sm">
         <td class="pr-2">
           <p-button
             [text]="true"
             size="small"
-            [pRowToggler]="customer"
+            [pRowToggler]="article"
             [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"
             styleClass="p-0 px-0  text-color"
             [style]="{ width: 'max-content' }"
@@ -62,13 +56,13 @@
         </td>
         <td class="pl-0">
           <div class="flex align-items-center gap-2">
-            <p-tableCheckbox [value]="customer"></p-tableCheckbox>
-            {{ customer.name }}
+            <p-tableCheckbox [value]="article"></p-tableCheckbox>
+            {{ article.datee.split(" ")[0] }}
           </div>
         </td>
-        <td>{{ customer.country.name }}</td>
-        <td>{{ customer.company }}</td>
-        <td>{{ customer.representative.name }}</td>
+        <td>{{ article.media_name }}</td>
+        <td>{{ article.title }}</td>
+        <td>{{ article.issue }}</td>
         <td>
           <div class="flex gap-2">
             <p-button
@@ -95,8 +89,19 @@
         </td>
       </tr>
     </ng-template>
-    <ng-template pTemplate="rowexpansion" let-product>
-      <h1>test</h1>
+    <ng-template pTemplate="rowexpansion" let-article>
+      <tr>
+        <td colspan="4">
+          <div class="flex flex-column gap-2">
+            <div class="text-sm">{{ article.title }}</div>
+            <div class="flex align-items-center gap-2">
+              <div class="text-sm">Issue:</div>
+              <p-tag [value]="article.issue"></p-tag>
+            </div>
+            <div class="text-sm">{{ article.content }}</div>
+          </div>
+        </td>
+      </tr>
     </ng-template>
     <ng-template pTemplate="paginatorleft" let-state class="ui-g">
       <div class="text-color text-sm">
