--- a/src/app/modules/dashboard/overview-articles/overview-articles.component.html
+++ b/src/app/modules/dashboard/overview-articles/overview-articles.component.html
@@ -4,33 +4,33 @@
   </div>
   <spinner [spinning]="isLoading">
     <div class="grid mb-4">
-      <div
-        class="col-3 cursor-pointer"
-        (click)="toBeImpl()"
-        *ngFor="let article of articles"
-      >
+      <div class="col-3 no-underline" *ngFor="let article of articles">
         <div class="mb-1">
-          <img
-            [src]="article.image_url"
-            [alt]="article.title"
-            class="h-10rem w-full"
-            style="object-fit: cover"
-            imgFallback="https://placehold.co/600x400?text=No+Image+Available"
-          />
+          <a [routerLink]="['/dashboard/articles', article.article_id]">
+            <img
+              [src]="article.image_url"
+              [alt]="article.title"
+              class="h-10rem w-full"
+              style="object-fit: cover"
+              imgFallback="https://placehold.co/600x400?text=No+Image+Available"
+            />
+          </a>
         </div>
         <div>
-          <div
-            class="mb-1 font-semibold text-sm text-color white-space-nowrap text-overflow-ellipsis overflow-hidden"
-            style="width: 240px"
-          >
-            {{ article.title }}
-          </div>
-          <div
-            class="mt-0 mb-2 text-xs text-color-secondary white-space-nowrap text-overflow-ellipsis overflow-hidden"
-            style="width: 240px"
-          >
-            {{ article.content }}
-          </div>
+          <a class="no-underline" [routerLink]="['/dashboard/articles', article.article_id]">
+            <div
+              class="mb-1 font-semibold text-sm text-color white-space-nowrap text-overflow-ellipsis overflow-hidden"
+              style="width: 240px"
+            >
+              {{ article.title }}
+            </div>
+            <div
+              class="mt-0 mb-2 text-xs text-color-secondary white-space-nowrap text-overflow-ellipsis overflow-hidden"
+              style="width: 240px"
+            >
+              {{ article.content }}
+            </div>
+          </a>
           <div class="flex justify-content-between align-items-center">
             <div class="flex gap-1 align-items-center">
               <div>
